turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:2: error: illegal start of statement (no modifiers allowed here)
  override def run() {
  ^